# CoreVital

./: .gitignore  AI.md  LICENSE  README.md  dashboard.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: test.yaml
.streamlit/: config.toml
configs/: default.yaml
configs/model_profiles/: default.yaml  gpt2.yaml  llama.yaml  mistral.yaml  mixtral.yaml  phi3.yaml  qwen2.yaml
corevital-validation/analysis/: RESULTS_SUMMARY.md  h1_results.csv  h2_results.csv  h2b_results.csv  h3_results.csv
corevital-validation/results/: checkpoint.json  features.parquet  grades.jsonl
docs/: BRANCH-RENAME.md  FILE-STATUS.md  Phase1 metrics analysis.md  audit-existing-features.md  competitive-landscape-and-ip.md  competitive-landscape.md  dashboard-options-research.md  dashboard-react-spec.md  design-journey.md  experiment-quick-reference.md  gpu-benchmarks.md  integration-examples.md  integrations.md  metrics-interpretation.md  model-compatibility.md  phase-0.75-journey.md  phase-1-execution-plan.md  phase-2-through-8-execution-plan.md  phase-branch-strategy.md  production-deployment.md  production-model-test-suite.md  risk-calibration.md  sample_trace_annotated.json  test-prompts.md  trace_schema.md  v0.4.0-launch.md  validation-report.md  visual-examples.md
docs/case-studies/: README.md  TEMPLATE.md  example.md
docs/datasette/: README.md  metadata.yml
docs/demo/: README.md  corevital_demo.db  sample_report.json
docs/mermaid/: calibration-workflow.mmd  compound-signals-detection.mmd  corevital-overview.mmd  early-warning-detectors.mmd  extensions-computation-flow.mmd  metrics-data-flow.mmd  metrics-dependency-chain.mmd  metrics-signal-interpretation.mmd  module-architecture.mmd  operations-flow-sequential.mmd  operations-hierarchy.mmd  phase-1-computation-pipeline.mmd  risk-score-computation.mmd  schema-v03-structure.mmd  step-processor-lifecycle.mmd  validation-experiment-flow.mmd
evaluation/: analyze_eval_suite.py  eval_suite_common.py  run_eval_suite.py
evaluation/runs/eval_suite_construct_001/: manifest.jsonl  run_summary.json  suite_meta.json
evaluation/runs/eval_suite_construct_001/analysis/: ENGINEER_README.md  graded_runs.csv  report.md  summary.json
evaluation/runs/eval_suite_construct_001/traces/: trace_035eb86a.json  trace_042b3bac.json  trace_08ae018c.json  trace_0a552559.json  trace_0f05969c.json  trace_155a8242.json  trace_18b6bc01.json  trace_1b2fa4c8.json  trace_1b6b20f3.json  trace_22700bae.json  trace_22847612.json  trace_23763789.json  trace_23a62674.json  trace_27c81df2.json  trace_2b6aa21b.json  trace_307ce451.json  trace_359ac7ce.json  trace_35c5db3a.json  trace_3748f780.json  trace_38ec751f.json  trace_39c9b5e3.json  (+69 more)
experiment/: POD_NOTES.md  README.md  requirements-experiment.txt  run_all.sh  setup.sh
experiment/analysis/: RESULTS_SUMMARY.md  global_manifest.json  key_findings.json
experiment/analysis/ablation/: summary.json
experiment/analysis/confidence_calibration/: summary.json
experiment/analysis/difficulty_stratified/: summary.json
experiment/analysis/focus_01_metric_correlation/: summary.json
experiment/analysis/focus_02_moe_vs_dense/: summary.json
experiment/analysis/focus_03_self_consistency/: summary.json
experiment/analysis/focus_04_layer_analysis/: summary.json
experiment/analysis/focus_05_difficulty/: summary.json
experiment/analysis/focus_06_cross_model/: summary.json
experiment/analysis/format_failure/: summary.json
experiment/analysis/outcome_profiling/: summary.json
experiment/analysis/ranking/: summary.json
experiment/analysis/risk_calibration/: summary.json
experiment/analysis/signal_redundancy/: summary.json
experiment/analysis/temperature_effects/: summary.json
experiment/calibration/: step1_ece_results.json  step1_failure_risk_results.json  step2_profile_manifest.json  step3_data_driven_weights.json  step4_feature_consensus.json  step5_proposed_risk_model.json  step5_proposed_risk_predictions.parquet  step6_per_model_evaluation.json
experiment/metadata/: corevital_version.json  pip_freeze.txt  system_info.json
experiment/results/: extraction_manifest.json  extraction_summary.md
experiment/scripts/: analyze.py  analyze_local_performance.py  calibrate_risk.py  check_resources.sh  check_run.py  extract_features.py  helpers.py  profile_one_trace.py  run_experiment.py  smoke_test.py  sync_to_s3.sh
notebooks/: try_corevital.ipynb
scripts/: export_report_html.py  gen_demo_db.py  gen_demo_report.py  gen_demo_traces.py  inflate_report_json_from_blob.py  run_production_model_tests.py  run_prompt_sweep.py  test_llama_stream.py  try_demo.sh
src/CoreVital/: __init__.py  __main__.py  api.py  calibration.py  calibration_risk.py  cli.py  compound_signals.py  config.py  early_warning.py  errors.py  fingerprint.py  logging_utils.py  monitor.py  narrative.py  risk.py
src/CoreVital/backends/: __init__.py  base.py  huggingface.py  llama_cpp_backend.py  tgi_backend.py  vllm_backend.py
src/CoreVital/instrumentation/: __init__.py  baselines.py  causal_lm.py  collector.py  hooks.py  performance.py  seq2seq.py  step_processor.py  summaries.py
src/CoreVital/integrations/: __init__.py  opentelemetry.py
src/CoreVital/models/: __init__.py  hf_loader.py  registry.py
src/CoreVital/reporting/: __init__.py  attention_queries.py  report_builder.py  schema.py  validation.py
src/CoreVital/sinks/: __init__.py  base.py  datadog_sink.py  http_sink.py  local_file.py  prometheus_sink.py  sqlite_sink.py  wandb_sink.py
src/CoreVital/utils/: __init__.py  serialization.py  time.py  typing.py
tests/: conftest.py  test_calibration.py  test_calibration_risk.py  test_compound_signals.py  test_early_warning.py  test_fingerprint.py  test_integration.py  test_metric_consistency.py  test_metric_integration.py  test_mock_instrumentation.py  test_model_profiles.py  test_models_production.py  test_monitor.py  test_narrative.py  test_performance.py  test_persistence.py  test_risk.py  test_schema_validation.py  test_sinks.py  test_smoke_gpt2_cpu.py  test_summaries.py
(+54 files in other folders)
