[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CoreVital"
version = "0.3.0"
description = "Instrumentation and monitoring toolkit for Large Language Model inference health"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "JB", email = "joebachir20@gmail.com"}
]
keywords = ["llm", "monitoring", "transformers", "instrumentation", "health"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.26.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
CoreVital = "CoreVital.cli:main"

[project.urls]
Homepage = "https://github.com/Joe-b-20/CoreVital"
Repository = "https://github.com/Joe-b-20/CoreVital"
Issues = "https://github.com/Joe-b-20/CoreVital/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "gpu: marks tests requiring a GPU (deselect with '-m \"not gpu\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
# E: pycodestyle errors
# F: pyflakes
# I: isort (import sorting)
# W: pycodestyle warnings
# B: flake8-bugbear (catches common bugs)

[tool.ruff.lint.isort]
known-first-party = ["CoreVital"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true