# =============================================================================
# CoreVital — LLM inference health monitor
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# -----------------------------------------------------------------------------
# Project metadata
# -----------------------------------------------------------------------------
[project]
name = "CoreVital"
version = "0.4.0"
description = "Instrumentation and monitoring toolkit for Large Language Model inference health"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "JB", email = "joebachir20@gmail.com" },
]
keywords = ["llm", "monitoring", "transformers", "instrumentation", "health"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

# -----------------------------------------------------------------------------
# Optional dependency groups
# -----------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
quantization = [
    "bitsandbytes>=0.41.0",
    "accelerate>=0.26.0",
]
serve = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
datadog = [
    "datadog-api-client>=2.20.0",
]
prometheus = [
    "prometheus-client>=0.20.0",
]
wandb = [
    "wandb>=0.16.0",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
datasette = [
    "datasette>=1.0",
    "datasette-dashboards>=0.6",
]
all = [
    "CoreVital[quantization,serve,datadog,prometheus,wandb,otel]",
]

# -----------------------------------------------------------------------------
# Entry points
# -----------------------------------------------------------------------------
[project.scripts]
CoreVital = "CoreVital.cli:main"
corevital = "CoreVital.cli:main"

[project.urls]
Homepage = "https://github.com/Joe-b-20/CoreVital"
Repository = "https://github.com/Joe-b-20/CoreVital"
Issues = "https://github.com/Joe-b-20/CoreVital/issues"

# -----------------------------------------------------------------------------
# Build — src layout
# -----------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

# -----------------------------------------------------------------------------
# Testing
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not slow'"
markers = [
    "gpu: marks tests requiring a GPU (deselect with '-m \"not gpu\"')",
    "slow: marks slow tests e.g. production model smoke (deselect with '-m \"not slow\"')",
]

# -----------------------------------------------------------------------------
# Linting (Ruff)
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]

[tool.ruff.lint.isort]
known-first-party = ["CoreVital"]

# -----------------------------------------------------------------------------
# Type checking (MyPy)
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
